in `nbextensions/config`:  * add css fix for twitter bootstrap shortcoming which resulted in unwanted horizontal scroll at some resolutions (see https://github.com/twbs/bootstrap/issues/3169)

--- a/nbextensions/config/main.css
+++ b/nbextensions/config/main.css
@@ -61,6 +61,17 @@
     content: "\f06a  (incompatible, enabled)";
 }
 
+/* bugfix for using .container with padding: we need at the padding extra  to width. Below that, we */ 
+@media (min-width: 768px) {
+    .container {
+        width: auto;
+    }
+}
+@media (min-width: 783px) {
+    .container {
+        width: 768px;
+    }
+}
 /* styles for the readme */
 
 .nbext-readme > .nbext-readme-contents {
